# moto_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEST_RUN.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run.py  tz.docx
.github/workflows/: ci.yml  deploy-vps.yml  deploy.yml
deploy/: README.md  check-telegram.sh  deploy.sh  moto-bot.service  setup-vps.sh  wipe_user_data.sh
deploy/sql/: wipe_user_data.sql
docs/: AUDIT_ОТЧЁТ_МОТО_БОТ.md  DIAGNOSIS_БОТ_НЕ_ОТВЕЧАЕТ.md  MAX_USER_ID.md  PRICES_SOURCE.md  PRODUCTION_CHECKLIST.md  PROMPT_MAX_REGISTRATION_FSM.md  REFACTOR_NOTES.md  REVISION_2026_03_17.md  REVISION_2026_03_CURRENT.md  ROLES_AND_PERMISSIONS.md  АНАЛИЗ_НЕРЕАЛИЗОВАННОЕ_ТЗ.md  ИНСТРУКЦИЯ_WEBHOOK_ЮKASSA.md  ТЗ_СТРУКТУРИРОВАННОЕ.md
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_dislike_count.py  003_bot_settings_phone_change.py  004_event_motorcade_limit.py  005_event_reports_is_hidden.py  006_activity_logs.py  007_enable_raise_profile.py  008_add_linked_user_id.py  009_constraints_idempotency.py  009_max_dialog_chat_id.py  010_add_reports_table_and_auto_block_threshold.py  011_add_profile_hidden_by_user.py  012_add_processed_payments.py  013_add_performance_indexes.py  014_add_report_reason.py
scripts/: test_imports.py
src/: __init__.py  config.py  main.py  max_admin_contacts.py  max_admin_panel.py  max_profile_edit.py  max_runner.py  texts.py  ui_copy.py  webhooks.py
src/handlers/: about.py  admin.py  admin_broadcast.py  admin_bug_reply.py  admin_contacts.py  bug_report.py  contacts.py  sos.py  (+9 more)
tests/: conftest.py  test_account_link_security.py  test_max_registration_state.py  test_motopair_handlers.py  test_registration_service.py  test_security.py  test_services.py  test_subscription_messages.py  test_validators.py  test_webhook.py
(+68 files in other folders)
